--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -125,5 +125,6 @@
     "xtr1common": "cpp",
     "xtree": "cpp",
     "xutility": "cpp"
-  }
+  },
+  "C_Cpp.default.compilerPath": "C:\\Users\\Paris\\bin\\g++.exe"
 }
