--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -124,6 +124,7 @@
     "xstddef": "cpp",
     "xtr1common": "cpp",
     "xtree": "cpp",
-    "xutility": "cpp"
+    "xutility": "cpp",
+    "regex": "cpp"
   }
 }
